# nrc-download

./: .gitignore  README.md  pyproject.toml
src/nrc_download/: __init__.py
systemd/: nrc-download.service  nrc-download.timer
